--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import "config/key-frames";
+@import "config/mixins";
 
 // External libraries
 @import "bootstrap/scss/bootstrap";
@@ -11,3 +13,5 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "devise/index";
+@import "styling/index";
