--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,8 @@
+.navbar {
+  padding: 1rem;
+}
+
+
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
@@ -9,4 +14,8 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+.nav-link {
+  margin: 0 15px;
 }
