--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,26 @@
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "SHOP", "/", class: "nav-link" %>
+        </li>
+        <li>
+          <%= link_to "ACCOUNT", "/", class: "nav-link" %>
+        </li>
+        <li>
+          <%= link_to "HOW IT WORKS", "/", class: "nav-link" %>
+        </li>
+        <li>
+          <%= link_to "ABOUT US", "/", class: "nav-link" %>
+        </li>
+        <li style="margin-left: 30px;">
+          <%= link_to "/", class: "nav-link" do %>
+          <%= image_tag 'basket.png', width: 20 %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to new_user_session_path, class: "nav-link" do %>
+          <%= image_tag 'user.png', width: 20 %>
+          <% end %>
         </li>
       <% end %>
     </ul>
