--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,7 @@
                 <%= f.input :password_confirmation,
                             required: true,
                             label: false,
-                            placeholder: "Passowrd confirmation",
+                            placeholder: "Password confirmation",
                             input_html: { autocomplete: "new-password", class: "form-inputs form control" } %>
               </div>
             </div>
