--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -3,9 +3,58 @@
 <h3>Product cards</h3>
 
 <div class="product-card-container">
-  <div class="product-card">
+<!--   <div class="product-card">
     <div class="product-card-image-container">
-      <%= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
+      <%#= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
+    </div>
+    <div class="product-card-content">
+      <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
+      <p class="product-material">100% Cotton</p>
+      <p class="product-price">$295</p>
+      <div class="shirt-fabrics-container">
+        <div class="shirt-fabrics">
+
+        </div>
+      </div>
+    </div>
+  </div> -->
+  <div id="each_product" class="product-card">
+    <div class="product-card-image-container">
+      <%= image_tag 'shirt-guy.jpeg', id: "each_product_main_image", class: "product-card-image" %>
+    </div>
+    <div class="product-card-content">
+      <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
+      <p class="product-material">100% Cotton</p>
+      <p class="product-price">$295</p>
+      <div class="shirt-fabrics-container">
+        <div class="shirt-fabrics">
+          <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+        </div>
+        <div class="shirt-fabrics">
+          <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+        </div>
+        <div class="shirt-fabrics">
+          <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+        </div>
+        <div class="shirt-fabrics">
+          <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+        </div>
+        <div class="shirt-fabrics">
+          <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+        </div>
+        <div class="shirt-fabrics"></div>
+        <div class="shirt-fabrics"></div>
+        <div class="shirt-fabrics"></div>
+        <div class="shirt-fabrics"></div>
+        <div class="shirt-fabrics"></div>
+        <div class="shirt-fabrics"></div>
+        <div class="shirt-fabrics"></div>
+      </div>
+    </div>
+  </div>
+<!--   <div class="product-card">
+    <div class="product-card-image-container">
+      <%#= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
     </div>
     <div class="product-card-content">
       <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
@@ -18,58 +67,9 @@
       </div>
     </div>
   </div>
-    <div class="product-card">
-    <div class="product-card-image-container">
-      <%= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
-    </div>
-    <div class="product-card-content">
-      <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
-      <p class="product-material">100% Cotton</p>
-      <p class="product-price">$295</p>
-      <div class="shirt-fabrics-container">
-        <div class="shirt-fabrics">
-          <%= image_tag 'https://images.pexels.com/photos/2247157/pexels-photo-2247157.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260', class: "product-thumbnail" %>
-        </div>
-        <div class="shirt-fabrics">
-          <%= image_tag 'https://images.pexels.com/photos/2247157/pexels-photo-2247157.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260', class: "product-thumbnail" %>
-        </div>
-        <div class="shirt-fabrics">
-          <%= image_tag 'https://images.pexels.com/photos/2247157/pexels-photo-2247157.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260', class: "product-thumbnail" %>
-        </div>
-        <div class="shirt-fabrics">
-          <%= image_tag 'https://images.pexels.com/photos/2247157/pexels-photo-2247157.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260', class: "product-thumbnail" %>
-        </div>
-        <div class="shirt-fabrics">
-          <%= image_tag 'https://images.pexels.com/photos/2247157/pexels-photo-2247157.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260', class: "product-thumbnail" %>
-        </div>
-        <div class="shirt-fabrics"></div>
-        <div class="shirt-fabrics"></div>
-        <div class="shirt-fabrics"></div>
-        <div class="shirt-fabrics"></div>
-        <div class="shirt-fabrics"></div>
-        <div class="shirt-fabrics"></div>
-        <div class="shirt-fabrics"></div>
-      </div>
-    </div>
-  </div>
-    <div class="product-card">
-    <div class="product-card-image-container">
-      <%= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
-    </div>
-    <div class="product-card-content">
-      <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
-      <p class="product-material">100% Cotton</p>
-      <p class="product-price">$295</p>
-      <div class="shirt-fabrics-container">
-        <div class="shirt-fabrics">
-
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="product-card">
     <div class="product-card-image-container">
-      <%= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
+      <%#= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
     </div>
     <div class="product-card-content">
       <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
@@ -80,7 +80,24 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 <h3>Carousel</h3>
+
+<script>
+
+  productCard = document.getElementById('each_product');
+  productMainImage = document.getElementById('each_product_main_image');
+  productThumbnail = document.querySelectorAll('.product-thumbnail');
+  originalSrcImage = productMainImage.src;
+
+  productCard.addEventListener('mouseover', () => {
+    productMainImage.src = productThumbnail[0].src;
+  })
+
+  productCard.addEventListener('mouseleave', () => {
+    productMainImage.src = originalSrcImage;
+  })
+
+</script>
