--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -1,27 +1,30 @@
 <div class="container">
   <h1>COMPONENTS</h1>
 
+</div>
+
+  <h3>HOME PAGE VIDEO</h3>
+  <div class="home-video">
+    <div class="player">
+      <%= video_tag "https://s3.eu-west-2.amazonaws.com/hoxtondigitalpublicassets/JamesWild/Origwolves_of_scotland_1280x676.mp4", class: "player__video viewer", id: "video_home", loop: true, autoplay: true, muted: true %>
+      <div class="video-logo-holder">
+        <div class="volume-toggle">
+          <%= image_tag "volume_on.png", class:"volume-logo d-none", id: "volume_on" %>
+          <%= image_tag "volume_off.png", class:"volume-logo", id: "volume_off" %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<div class="container">
+
   <h3>Product cards</h3>
 
   <div class="product-card-container">
-  <!--   <div class="product-card">
-      <div class="product-card-image-container">
-        <%#= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
-      </div>
-      <div class="product-card-content">
-        <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
-        <p class="product-material">100% Cotton</p>
-        <p class="product-price">$295</p>
-        <div class="shirt-fabrics-container">
-          <div class="shirt-fabrics">
-
-          </div>
-        </div>
-      </div>
-    </div> -->
     <div id="each_product" class="product-card">
       <div class="product-card-image-container">
         <%= image_tag 'shirt-guy.jpeg', id: "each_product_main_image", class: "product-card-image" %>
+        <%= image_tag 'fabric.png', class: "product-card-image hover-image" %>
       </div>
       <div class="product-card-content">
         <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
@@ -53,37 +56,36 @@
         </div>
       </div>
     </div>
-  <!--   <div class="product-card">
-      <div class="product-card-image-container">
-        <%#= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
-      </div>
-      <div class="product-card-content">
-        <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
-        <p class="product-material">100% Cotton</p>
-        <p class="product-price">$295</p>
-        <div class="shirt-fabrics-container">
-          <div class="shirt-fabrics">
-
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="product-card">
-      <div class="product-card-image-container">
-        <%#= image_tag 'shirt-guy.jpeg', class: "product-card-image" %>
-      </div>
-      <div class="product-card-content">
-        <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
-        <p class="product-material">100% Cotton</p>
-        <p class="product-price">$295</p>
-        <div class="shirt-fabrics-container">
-          <div class="shirt-fabrics">
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
-
+  <div>
+    <h3>show page fabrics</h3>
+    <div class="show-page-fabric-container">
+      <div class="show-page-fabrics fabrics-active">
+        <%= image_tag 'fabric.png', style: "width: 100%; height: 80%;" %>
+        <div class="fabric-style">
+          <p>Fabric Style</p>
+        </div>
+      </div>
+      <div class="show-page-fabrics">
+        <%= image_tag 'fabric.png', style: "width: 100%; height: 80%;" %>
+        <div class="fabric-style">
+          <p>Fabric Style</p>
+        </div>
+      </div>
+      <div class="show-page-fabrics">
+        <%= image_tag 'fabric.png', style: "width: 100%; height: 80%;" %>
+        <div class="fabric-style">
+          <p>Fabric Style</p>
+        </div>
+      </div>
+      <div class="show-page-fabrics">
+        <%= image_tag 'fabric.png', style: "width: 100%; height: 80%;" %>
+        <div class="fabric-style">
+          <p>Fabric Style</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div>
     <h3>cards</h3>
     <div class="card-links-container">
@@ -108,30 +110,107 @@
 
   <div>
     <h3>Buttons</h3>
+    <div style="display: flex;">
+      <div style="margin: 20px;">
+        <p>Primary</p>
 
-    <p>Primary</p>
+        <%= link_to 'SEE ALL', '#', class: "primary-button" %>
+      </div>
+      <div style="margin: 20px;">
+        <p>Secondary</p>
 
-    <%= link_to 'SEE ALL', '#', class: "primary-button" %>
+        <%= link_to 'NEW SHIRTS', '#', class: "secondary-button" %>
+      </div>
+      <div style="margin: 20px;">
+        <p>shop buttons</p>
 
-    <p>Secondary</p>
-
-    <%= link_to 'NEW SHIRTS', '#', class: "secondary-button" %>
+        <%= link_to '#', class: "shop-button" do %>
+         <%= image_tag 'basket.png', width: 20 %> ADD TO BAG
+        <% end %>
+      </div>
+    </div>
   </div>
+
+  <h3>Carousel</h3>
+
+  <div class="carousel-container">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block carousel-image" src="https://images.pexels.com/photos/1321943/pexels-photo-1321943.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block carousel-image" src="https://images.pexels.com/photos/1321943/pexels-photo-1321943.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block carousel-image" src="https://images.pexels.com/photos/1321943/pexels-photo-1321943.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Third slide">
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+      <%= image_tag 'carousel-previous.png', height: 60, width: 60, aria: { hidden: true } %>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+      <%= image_tag 'carousel-next.png', height: 60, width: 60, aria: { hidden: true } %>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+  <h3>Line breaks</h3>
+
+  <div class="product-line-break">
+    <div class="line-break-info">
+      DETAILS
+    </div>
+    <div class="line-break-line">
+
+    </div>
+  </div>
+
 </div>
+
 
 <script>
 
-  productCard = document.getElementById('each_product');
-  productMainImage = document.getElementById('each_product_main_image');
-  productThumbnail = document.querySelectorAll('.product-thumbnail');
-  originalSrcImage = productMainImage.src;
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+  anchor.addEventListener('click', function (e) {
+      e.preventDefault();
+      document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+          });
+      });
+  });
 
-  productCard.addEventListener('mouseover', () => {
-    productMainImage.src = productThumbnail[0].src;
-  })
+  const video = document.getElementById("video_home");
+  const volumeOn = document.getElementById("volume_on");
+  const volumeOff = document.getElementById("volume_off");
 
-  productCard.addEventListener('mouseleave', () => {
-    productMainImage.src = originalSrcImage;
-  })
+  volumeOff.addEventListener('click', function() {
+    volumeOn.classList.toggle("d-none");
+    volumeOff.classList.toggle("d-none");
+    video.muted = false;
+  });
+
+  volumeOn.addEventListener('click', function() {
+    volumeOn.classList.toggle("d-none");
+    volumeOff.classList.toggle("d-none");
+    video.muted = true;
+  });
+
+  // productCard = document.getElementById('each_product');
+  // productMainImage = document.getElementById('each_product_main_image');
+  // productThumbnail = document.querySelectorAll('.product-thumbnail');
+  // originalSrcImage = productMainImage.src;
+
+  // productCard.addEventListener('mouseover', () => {
+  //   productMainImage.src = productThumbnail[0].src;
+  // })
+
+  // productCard.addEventListener('mouseleave', () => {
+  //   productMainImage.src = originalSrcImage;
+  // })
 
 </script>
