--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,8 +39,8 @@
           <%= link_to "ABOUT US", "/", class: "nav-link" %>
         </li>
         <li style="margin-left: 30px;">
-          <%= link_to "/", class: "nav-link" do %>
-          <%= image_tag 'basket.png', width: 20 %>
+          <%= link_to basket_path, class: "nav-link" do %>
+            <%= image_tag 'basket.png', width: 20 %>
           <% end %>
         </li>
         <li>
