--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -18,45 +18,65 @@
 
 <div class="container">
 
-  <h3>Product cards</h3>
 
-  <div class="product-card-container">
-    <div id="each_product" class="product-card">
-      <div class="product-card-image-container">
-        <%= image_tag 'shirt-guy.jpeg', id: "each_product_main_image", class: "product-card-image" %>
-        <%= image_tag 'fabric.png', class: "product-card-image hover-image" %>
+    <div style="display: flex;">
+      <h3>Product cards</h3>
+      <div class="product-card-container">
+        <div id="each_product" class="product-card">
+          <div class="product-card-image-container">
+            <%= image_tag 'shirt-guy.jpeg', id: "each_product_main_image", class: "product-card-image" %>
+            <%= image_tag 'fabric.png', class: "product-card-image hover-image" %>
+          </div>
+          <div class="product-card-content">
+            <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
+            <p class="product-material">100% Cotton</p>
+            <p class="product-price">$295</p>
+            <div class="shirt-fabrics-container">
+              <div class="shirt-fabrics">
+                <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+              </div>
+              <div class="shirt-fabrics">
+                <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+              </div>
+              <div class="shirt-fabrics">
+                <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+              </div>
+              <div class="shirt-fabrics">
+                <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+              </div>
+              <div class="shirt-fabrics">
+                <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+              </div>
+              <div class="shirt-fabrics"></div>
+              <div class="shirt-fabrics"></div>
+              <div class="shirt-fabrics"></div>
+              <div class="shirt-fabrics"></div>
+              <div class="shirt-fabrics"></div>
+              <div class="shirt-fabrics"></div>
+              <div class="shirt-fabrics"></div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="product-card-content">
-        <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
-        <p class="product-material">100% Cotton</p>
-        <p class="product-price">$295</p>
-        <div class="shirt-fabrics-container">
-          <div class="shirt-fabrics">
-            <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+        <h3>checkout basket cards</h3>
+      <div style="position: relative;">
+        <div class="basket-card-container">
+          <div id="each_product" class="product-card">
+            <div class="product-card-image-container">
+              <%= image_tag 'shirt-guy.jpeg', id: "each_product_main_image", class: "product-card-image" %>
+              <%= image_tag 'fabric.png', class: "product-card-image hover-image" %>
+            </div>
+            <div class="product-card-content">
+              <p class="product-title">THE BIRSEYE FLANNEL SHIRT IN SKY BLUE</p>
+              <p class="product-price">$295</p>
+            </div>
           </div>
-          <div class="shirt-fabrics">
-            <%= image_tag 'fabric.png', class: "product-thumbnail" %>
+          <div class="remove-product">
+            <%= image_tag 'remove.png', height: 20, width: 20 %>
           </div>
-          <div class="shirt-fabrics">
-            <%= image_tag 'fabric.png', class: "product-thumbnail" %>
-          </div>
-          <div class="shirt-fabrics">
-            <%= image_tag 'fabric.png', class: "product-thumbnail" %>
-          </div>
-          <div class="shirt-fabrics">
-            <%= image_tag 'fabric.png', class: "product-thumbnail" %>
-          </div>
-          <div class="shirt-fabrics"></div>
-          <div class="shirt-fabrics"></div>
-          <div class="shirt-fabrics"></div>
-          <div class="shirt-fabrics"></div>
-          <div class="shirt-fabrics"></div>
-          <div class="shirt-fabrics"></div>
-          <div class="shirt-fabrics"></div>
         </div>
       </div>
     </div>
-  </div>
   <div>
     <h3>show page fabrics</h3>
     <div class="show-page-fabric-container">
@@ -170,19 +190,25 @@
     </div>
   </div>
 
+  <h3>Checkout Modal</h3>
+
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>
+
+  <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="checkout-title">
+          <h3>CHECKOUT</h3>
+          <%= link_to 'BACK TO SHOPPING BAG', components_path, class: "underline-link" %>
+        </div>
+        <div class="checkout-form">
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-
 <script>
-
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-  anchor.addEventListener('click', function (e) {
-      e.preventDefault();
-      document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-          });
-      });
-  });
 
   const video = document.getElementById("video_home");
   const volumeOn = document.getElementById("volume_on");
