--- a/app/assets/stylesheets/pages/_components.scss
+++ b/app/assets/stylesheets/pages/_components.scss
@@ -41,6 +41,7 @@
   outline: 5px solid transparent;
   transition: all 0.3s ease;
   position: relative;
+  background-color: white;
   &:hover {
     .hover-image {
       opacity: 1;
@@ -60,7 +61,6 @@
   height: 25px;
   flex: 0 0 calc(100% / 5 - 2 * 5px);
   margin: 5px;
-  background: purple;
   overflow: hidden;
 }
 
@@ -91,9 +91,6 @@
   background: white;
 }
 
-.product-card {
-}
-
 .product-title {
   color: $primary-grey;
   letter-spacing: 2px;
@@ -109,6 +106,7 @@
   padding: 0 10px;
   margin: 0;
   margin-top: 10px;
+  letter-spacing: 2px;
 }
 
 .product-material {
