styled index page for shirts

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,9 @@
 @import "avatar";
 @import "navbar";
 @import "footer";
+@import "buttons";
+@import "carousel";
+@import "line_breaks";
+@import "shirts_card";
+@import "show_fabrics_card";
+
