--- a/app/views/shirts/_shirt_fabrics_card.html.erb
+++ b/app/views/shirts/_shirt_fabrics_card.html.erb
@@ -1,4 +1,4 @@
-<div id="shirt_fabric_<%= shirt_fabric.id %>" class="shirt-fabrics" style="background: <%= shirt_fabric.fabric.color %>">
+<div id="shirt_fabric_<%= shirt_fabric.id %>" class="shirt-fabrics">
   <%= image_tag @fabrics.sample, class: "product-thumbnail" %>
 </div>
 
