--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,6 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "shirts/index";
 @import "devise/index";
 @import "styling/index";
