--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,5 +12,5 @@ $light-gray: #F4F4F4;
 //------------------------
 
 $primary-grey: #8A8A8A;
-$darker-grey: #8A8A8A;
+$darker-grey: #4B4B4B;
 $lighter-grey: #9C9C9C;
