--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "SHOP", "/", class: "nav-link" %>
+          <%= link_to "SHOP", shirts_path, class: "nav-link" %>
         </li>
         <li>
           <%= link_to "ACCOUNT", "/", class: "nav-link" %>
