--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -2,8 +2,10 @@
 // CAROUSEL
 
 .carousel-container {
-  width: 53vw;
-  position: relative;
+  width: 100%;
+  max-width: 720px;
+  position: sticky;
+  top: 82px;
   display: flex;
   justify-content: center;
 }
@@ -12,10 +14,11 @@
 .carousel-image {
   max-width: 100%;
   max-height: 90vh;
+  margin: auto;
 }
 
 .carousel {
-  width: 40vw;
+  width: 50vw;
 }
 
 .carousel-item {
@@ -26,6 +29,7 @@
   width: 60px;
   top: calc(50% - 30px);
   opacity: 1;
+  position: relative;
   &:hover {
     opacity: 1;
   }
