--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
   <body>
     <%= render 'shared/navbar' %>
+    <div style="height: 82px;"></div>
     <%= render 'shared/flashes' %>
     <%= yield %>
     <%= render 'shared/footer' %>
