--- a/app/views/shirts/show.html.erb
+++ b/app/views/shirts/show.html.erb
@@ -1,7 +1,93 @@
-<h3><%= @shirt.name %></h3>
+<div class="shirt-container">
+  <div class="shirt-details-container">
+    <h3 class="shirt-show-title"><%= @shirt.name.upcase %></h3>
+    <div class="show-page-fabric-container">
+        <div class="show-page-fabrics fabrics-active">
+          <%= image_tag @fabrics.sample, style: "width: 100%; height: 80%;" %>
+          <div class="fabric-style">
+            <p>Fabric Style</p>
+          </div>
+        </div>
+        <div class="show-page-fabrics">
+          <%= image_tag @fabrics.sample, style: "width: 100%; height: 80%;" %>
+          <div class="fabric-style">
+            <p>Fabric Style</p>
+          </div>
+        </div>
+        <div class="show-page-fabrics">
+          <%= image_tag @fabrics.sample, style: "width: 100%; height: 80%;" %>
+          <div class="fabric-style">
+            <p>Fabric Style</p>
+          </div>
+        </div>
+        <div class="show-page-fabrics">
+          <%= image_tag @fabrics.sample, style: "width: 100%; height: 80%;" %>
+          <div class="fabric-style">
+            <p>Fabric Style</p>
+          </div>
+        </div>
+    </div>
+    <div class="buy-button-container">
+      <p class="show-page-product-price"><%= humanized_money_with_symbol(@shirt.price) %></p>
+      <%= link_to shirt_basket_items_path(@shirt), method: :post, class: "shop-button" do %>
+        <%= image_tag 'basket.png', width: 20 %> ADD TO BAG
+      <% end %>
+    </div>
+    <div class="product-line-break">
+      <div class="line-break-info">
+        DETAILS
+      </div>
+      <div class="line-break-line"></div>
+    </div>
+    <p style="margin: 0 5px;">This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. </p>
+    <div class="product-line-break">
+      <div class="line-break-info">
+        MORE DETAILS
+      </div>
+      <div class="line-break-line"></div>
+    </div>
+      <p style="margin: 0 5px;">This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. </p>
+      <div class="product-line-break">
+        <div class="line-break-info">
+          EVEN MORE DETAILS
+        </div>
+        <div class="line-break-line"></div>
+      </div>
+      <p style="margin: 0 5px;">This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. This is a whole load of information about this lovely shirt you may be interested in purchasing. This will be repeated in order to fill up all of this empty space. </p>
+      <div style="height: 150px;"></div>
+    </div>
 
-<%= link_to shirt_basket_items_path(@shirt), method: :post do %>
-  <div>
-    <h5>BUY NOW!</h5>
+
+  <div class="shirt-carousel">
+    <div class="carousel-container">
+      <div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+          <%= image_tag 'carousel-previous.png', height: 60, width: 60, aria: { hidden: true } %>
+          <span class="sr-only">Previous</span>
+        </a>
+      </div>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block carousel-image" src="https://images.pexels.com/photos/1321943/pexels-photo-1321943.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block carousel-image" src="https://images.pexels.com/photos/1321943/pexels-photo-1321943.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block carousel-image" src="https://images.pexels.com/photos/1321943/pexels-photo-1321943.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Third slide">
+          </div>
+        </div>
+      </div>
+      <div>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+          <%= image_tag 'carousel-next.png', height: 60, width: 60, aria: { hidden: true } %>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
   </div>
-<% end %>
+</div>
+
